--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,5 +7,7 @@ $red:             #e70808;
 $blue:            #177dee;
 $green:           #18a541;
 $highlight:       #ffec1a;
+$good:            #4eff4e;
+$bad:             #ff4e4e;
 
 $anim-time:         0.3s;
