--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import './scss/variables';
+@import './scss/mixins';
 @import './scss/main';
 @import './scss/components/dice';
 @import './scss/components/row';
