--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -17,12 +17,14 @@ body {
 .heading-value {
   border: 0;
   background: transparent;
+  font-family: $font-morpheus;
   font-size: 1.8em;
   letter-spacing: 1.5px;
 }
 
 .heading-dice-count {
-  font-size: 1.6em;
+  font-family: $font-flair;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
@@ -30,7 +32,7 @@ body {
   padding: 8px 10px;
   border: 2px solid $white;
   border-radius: 10px;
-  background: transparent;
+  background: fade-out($white, 0.85);
   color: $white;
   font-size: 0.8em;
   letter-spacing: 1.5px;
@@ -46,4 +48,22 @@ body {
 
 .btn-lg {
   padding: 15px 20px;
+  font-family: $font-morpheus;
+  font-size: 1em;
+}
+
+.img-bg {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(0.5px) brightness(0.5) sepia(50%) saturate(90%);
+  }
 }
