--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -15,10 +15,11 @@ body {
 }
 
 .heading-value {
+  padding: 0;
   border: 0;
   background: transparent;
   font-family: $font-morpheus;
-  font-size: 1.8em;
+  font-size: 1.5em;
   letter-spacing: 1.5px;
 }
 
@@ -26,6 +27,47 @@ body {
   font-family: $font-flair;
   font-size: 1.5em;
   font-weight: bold;
+}
+
+.row {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+
+  &.row-centered {
+    align-items: center;
+    justify-content: center;
+  }
+
+  &.row-selected {
+    box-shadow: inset 0 0 20px fade-out($highlight, 0.5);
+  }
+
+  &.row-header {
+    padding-bottom: 2.5%;
+
+    .heading-value:not(:last-child)::after {
+      content: '|';
+      margin: 0 0.5em;
+    }
+  }
+
+  .row-btn {
+    min-width: 30px;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    color: $white;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .row-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
 
 .btn {
@@ -64,6 +106,24 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &.img-bottom-center img {
+    object-position: center bottom;
+  }
+
+  &.img-dark img {
     filter: blur(0.5px) brightness(0.5) sepia(50%) saturate(90%);
+  }
+}
+
+.step {
+  .row {
+    min-height: 23vh;
+  }
+
+  .row:first-child,
+  .row:last-child {
+    min-height: 15.5vh;
   }
 }
