--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,4 @@
-$dice-w:            40px;
-$dice-border:       4px;
+$dice-size:         20px;
 
 $white:           #ffffff;
 $black:           #000000;
