--- a/src/scss/components/_dice.scss
+++ b/src/scss/components/_dice.scss
@@ -1,14 +1,19 @@
 @use "sass:math";
 
+$dice-w:            2em;
 $dice-w-half:       $dice-w * 0.5;
 $dice-h:            $dice-w-half * math.sqrt(3);
+$dice-border:       0.2em;
 $dice-side-tilt:    math.atan(1 / math.sqrt(2));
 $dice-sides:        (8, 5, 4, 1, 7, 6, 3, 2);
 
 .dice {
   position: relative;
-  display: inline-block;
-  margin: 0 10px;
+  display: inline-flex;
+  margin: 0 ($dice-w * 0.25);
+  font-size: $dice-size;
+
+  .dice-sm-container & { font-size: $dice-size * 0.8; }
 
   &.dice-good::before,
   &.dice-bad::before {
@@ -25,17 +30,26 @@ $dice-sides:        (8, 5, 4, 1, 7, 6, 3, 2);
   
   &.dice-good::before {
     background: $good;
-    box-shadow: 0 0 30px $good;
+    box-shadow: 0 0 ($dice-w * 0.75) $good;
   }
   
   &.dice-bad::before {
     background: $bad;
-    box-shadow: 0 0 30px $bad;
+    box-shadow: 0 0 ($dice-w * 0.75) $bad;
   }
 
   &.dice-rerolled {
     opacity: 0.7;
   }
+}
+
+.dice-count {
+  display: inline-block;
+  margin-right: $dice-w * 0.15;
+  color: $white;
+  font-family: $font-flair;
+  font-size: $dice-w * 0.75;
+  line-height: $dice-w * 1.05;
 }
 
 .dice-sides {
