--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -36,6 +36,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0 10px;
+  transition: box-shadow $anim-time;
 
   &.row-centered {
     align-items: center;
@@ -43,6 +44,7 @@ body {
   }
 
   &.row-selected {
+    border-radius: 10px;
     box-shadow: inset 0 0 20px fade-out($highlight, 0.5);
   }
 
@@ -56,7 +58,7 @@ body {
 
     .img-char {
       position: absolute;
-      right: 0;
+      right: 5px;
       box-shadow: 0 0 10px $black;
     }
   }
